Add API endpoints for managing OAuth 2.0 clients  (#90)
* Add API endpoints for managing OAuth clients

This depends on #87. This adds the API endpoints to create, read and
delete clients.

The create endpoint binds a OAuth 2.0 client to a tenant, and returns
a client id and secret to be used in a later PR for the client
credentials flow.


* Remove scope


* Remove scope from request body


* generate secrets better


* Remove the 404 from the generated code


* Readd tests that got lost


* Remove error types from openapi.yaml


* Fix Oauth client API issues


* remove client.Secret assignment in ToV1OAuthClient


---------
